# SPARC

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README.en.org  README.org  README.ru.org  configure.ac  guix.scm  main.tex  references.bib  sparc.tex  version.tex.in
.github/workflows/: pdf.yaml  ubuntu.yaml
build-aux/: .gitignore
examples/music/daisy_bell/: daisy_bell.ino  music.h  music.ino
examples/music/daisy_bell_2/: daisy_bell_2.ino  music.h  music.ino
examples/music/doom/: doom.ino
examples/music/game_of_thrones/: game_of_thrones.ino  melody.h  melody.ino  notes.h  ports.h
examples/music/windows_xp_pinball_theme/: music.h  music.ino  windows_xp_pinball_theme.ino
images/: README.org
images/schematics/: 001-led.fzz  002-simple-arduino-circuit.fzz  003-simple-arduino-circuit-resistor-in-series.fzz  arduino-serial-communication-1.fzz  arduino-serial-communication-2.fzz  lcd-00.fzz  lcm1602-i2c-leds-en.fzz  lcm1602-i2c-leds.fzz
images/schematics/i2c-pcf8574-lcd-adapter/: i2c-pcf8574-lcd-adapter.kicad_sch  sym-lib-table
images/the-noun-project/: README.org
sections/: appendix-melody-00.tex  appendix-octaves.tex  appendix-prostokvashino-score.tex  appendix-twinkle-twinkle-little-star-01.tex  commands.tex  communication-i2c.tex  communication-intro.tex  communication-serial-port.tex  dialogues-with-computer-algorithms.tex  dialogues-with-computer-arduino-ide.tex  dialogues-with-computer-arduino.tex  dialogues-with-computer-breadboard.tex  dialogues-with-computer-control-flow.tex  dialogues-with-computer-introduction.tex  dialogues-with-computer-memory.tex  dialogues-with-computer-multimeter.tex  dialogues-with-computer-program-structure.tex  electronics-building-circuits.tex  electronics-circuits.tex  electronics-potential-difference.tex  electronics-resistance.tex  electronics-voltage.tex  game-dev-animation.tex  game-dev-buttons.tex  game-dev-game-map.tex  game-dev-genre-and-plot.tex  game-dev-graphics.tex  game-dev-lcd.tex  game-dev-logic.tex  game-dev-player.tex  game-dev-sounds.tex  introduction.tex  music-and-technology-synthesis-arrays.tex  music-and-technology-synthesis-bass-clef.tex  music-and-technology-synthesis-dotted-notes.tex  music-and-technology-synthesis-flats-and-sharps.tex  music-and-technology-synthesis-harmony.tex  music-and-technology-synthesis-music-band.tex  music-and-technology-synthesis-musical-scale.tex  music-and-technology-synthesis-octave-system.tex  (+15 more)
sources/music/pinball_song/: pinball_song.ino
src/: references.bib
src/common/: common.tex  figureADC.tex  figureAVRMemory.tex  figureAnalogSignalExample.tex  figureArray.tex  figureArrayOfPointers.tex  figureBigLCD.tex  figureBigLCDSchematics.tex  figureBlinkinLEDGraph.tex  figureBuildIndirectInclusion.tex  figureBuildSteps.tex  figureBuildStepsHeaders.tex  figureBuildStepsMultipleFiles.tex  figureButtonBounceGraph.tex  figureButtonCircuit.tex  figureButtonPulldownResistorCircuit.tex  figureButtonPullupResistorCircuit.tex  figureDigitalSignalExample.tex  figureElectronicsConnectedWaterVessels.tex  figureElectronicsLED.tex  figureElectronicsLEDCircuit.tex  figureElectronicsResistance.tex  figureElectronicsResistorCircuit.tex  figureElectronicsSequentialResistors.tex  figureElectronicsSimpleCircruit.tex  figureElectronicsVoltage.tex  figureElectronicsVoltageWithCurrent.tex  figureElectronicsWaterVessels.tex  figureIICSchematics.tex  figureInterruptTimerCompare.tex  figureInterruptTimerOverflow.tex  figureInterruptTypes.tex  figureLCDChar.tex  figureLCDCharAnimation.tex  figureLCDCharPlayer.tex  figureLCDCharRow.tex  figureLCDConnection.tex  figureLCMLeds.tex  figureMemoryHierarchy.tex  figureMusicBarFourFour.tex  (+41 more)
src/en/: sparc.tex  version.tex.in
src/en/sections/: appendix-octaves.tex  appendix-prostokvashino-score.tex  appendix-twinkle-twinkle-little-star-01.tex  appendix-twinkle-twinkle-little-star-02.tex  commands.tex  communication-bitwise-operations.tex  communication-i2c.tex  communication-intro.tex  communication-serial-port.tex  communication-shift-registers.tex  communication-spi.tex  dialogues-with-computer-algorithms.tex  dialogues-with-computer-arduino-ide.tex  dialogues-with-computer-arduino.tex  dialogues-with-computer-breadboard.tex  dialogues-with-computer-control-flow.tex  dialogues-with-computer-introduction.tex  dialogues-with-computer-memory.tex  dialogues-with-computer-multimeter.tex  dialogues-with-computer-procedures.tex  dialogues-with-computer-program-structure.tex  dialogues-with-computer-title-image.tex  dialogues-with-computer-wokwi.tex  electronics-building-circuits.tex  electronics-circuits.tex  electronics-introduction.tex  electronics-potential-difference.tex  electronics-resistance.tex  electronics-voltage.tex  game-dev-animation.tex  game-dev-buttons.tex  game-dev-game-map.tex  game-dev-genre-and-plot.tex  game-dev-graphics.tex  game-dev-intro.tex  game-dev-lcd.tex  game-dev-player.tex  game-dev-sounds.tex  game-dev-structures.tex  introduction.tex  (+26 more)
src/ru/: sparc.tex  version.tex.in
src/ru/sections/: appendix-daisy-bell-score.tex  appendix-octaves.tex  appendix-prostokvashino-score.tex  appendix-twinkle-twinkle-little-star-01.tex  appendix-twinkle-twinkle-little-star-02.tex  commands.tex  communication-bitwise-operations.tex  communication-i2c.tex  communication-intro.tex  communication-serial-port.tex  communication-shift-registers.tex  communication-spi.tex  dialogues-with-computer-algorithms.tex  dialogues-with-computer-arduino-ide.tex  dialogues-with-computer-arduino.tex  dialogues-with-computer-breadboard.tex  dialogues-with-computer-control-flow.tex  dialogues-with-computer-introduction.tex  dialogues-with-computer-memory.tex  dialogues-with-computer-multimeter.tex  dialogues-with-computer-procedures.tex  dialogues-with-computer-program-structure.tex  dialogues-with-computer-wokwi.tex  electronics-building-circuits.tex  electronics-circuits.tex  electronics-potential-difference.tex  electronics-resistance.tex  electronics-voltage.tex  game-dev-animation.tex  game-dev-buttons.tex  game-dev-engine.tex  game-dev-intro.tex  (+40 more)
